--- a/MusicPlayerControl/MusicPlayerControl/Base.lproj/Main.storyboard
+++ b/MusicPlayerControl/MusicPlayerControl/Base.lproj/Main.storyboard
@@ -23,42 +23,42 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="gLj-kz-axj">
-                                <rect key="frame" x="177" y="367" width="20" height="20"/>
+                                <rect key="frame" x="177" y="323" width="20" height="64"/>
                             </activityIndicatorView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="U5P-G9-P5a">
-                                <rect key="frame" x="0.0" y="64" width="375" height="221"/>
+                            <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="U5P-G9-P5a">
+                                <rect key="frame" x="40" y="20" width="295" height="221"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="221" id="Oyg-6y-Cxb"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yI4-le-cKK">
-                                    <size key="itemSize" width="344" height="250"/>
+                                    <size key="itemSize" width="295" height="221"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectionViewCell" id="u9c-u0-0hA" customClass="CollectionViewCell" customModule="MusicPlayerControl" customModuleProvider="target">
-                                        <rect key="frame" x="15.5" y="0.0" width="344" height="250"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="295" height="221"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="344" height="250"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="295" height="221"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MfQ-xU-Qrr">
-                                                    <rect key="frame" x="-1" y="0.0" width="344" height="250"/>
+                                                    <rect key="frame" x="-1" y="0.0" width="295" height="250"/>
                                                 </imageView>
                                                 <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uBC-gh-pX2">
-                                                    <rect key="frame" x="-1" y="178" width="344" height="72"/>
+                                                    <rect key="frame" x="-1" y="178" width="295" height="72"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAM-dH-ytL">
-                                                            <rect key="frame" x="133.5" y="24" width="77" height="20"/>
+                                                            <rect key="frame" x="109" y="24" width="77" height="20"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZS-nj-Mv8">
-                                                            <rect key="frame" x="8" y="6" width="70" height="56"/>
+                                                            <rect key="frame" x="8" y="6" width="45.5" height="56"/>
                                                             <state key="normal" title="Button" image="playWhite"/>
                                                         </button>
                                                     </subviews>
@@ -92,11 +92,11 @@
                                 </cells>
                             </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="102" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="9h6-3k-ksi">
-                                <rect key="frame" x="0.0" y="293" width="375" height="366"/>
+                                <rect key="frame" x="0.0" y="249" width="375" height="410"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TableViewCell" id="waf-Jv-5j0" customClass="TableViewCell" customModule="MusicPlayerControl" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="56" width="375" height="102"/>
+                                        <rect key="frame" x="0.0" y="55.5" width="375" height="102"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="waf-Jv-5j0" id="GXd-5v-Slx">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="101"/>
@@ -183,8 +183,8 @@
                             <constraint firstAttribute="trailingMargin" secondItem="9h6-3k-ksi" secondAttribute="trailing" constant="-16" id="Whg-sI-DvQ"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="gLj-kz-axj" secondAttribute="bottom" constant="280" id="ZZT-TY-4mH"/>
                             <constraint firstItem="9h6-3k-ksi" firstAttribute="top" secondItem="U5P-G9-P5a" secondAttribute="bottom" constant="8" id="bn6-cf-fDM"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="U5P-G9-P5a" secondAttribute="trailing" constant="-16" id="h1M-EP-97U"/>
-                            <constraint firstItem="U5P-G9-P5a" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="utQ-5N-L8d"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="U5P-G9-P5a" secondAttribute="trailing" constant="24" id="h1M-EP-97U"/>
+                            <constraint firstItem="U5P-G9-P5a" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="24" id="utQ-5N-L8d"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="9h6-3k-ksi" secondAttribute="bottom" constant="8" id="vDV-Zs-ajq"/>
                         </constraints>
                     </view>
