--- a/MusicPlayerControl/MusicPlayerControl/Base.lproj/Main.storyboard
+++ b/MusicPlayerControl/MusicPlayerControl/Base.lproj/Main.storyboard
@@ -31,25 +31,25 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="221" id="Oyg-6y-Cxb"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yI4-le-cKK">
-                                    <size key="itemSize" width="295" height="221"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yI4-le-cKK">
+                                    <size key="itemSize" width="294" height="221"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectionViewCell" id="u9c-u0-0hA" customClass="CollectionViewCell" customModule="MusicPlayerControl" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="295" height="221"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="294" height="221"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="295" height="221"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="294" height="221"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MfQ-xU-Qrr">
-                                                    <rect key="frame" x="-1" y="0.0" width="295" height="250"/>
+                                                    <rect key="frame" x="-1" y="0.0" width="295" height="221"/>
                                                 </imageView>
                                                 <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uBC-gh-pX2">
-                                                    <rect key="frame" x="-1" y="178" width="295" height="72"/>
+                                                    <rect key="frame" x="-1" y="149" width="295" height="72"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAM-dH-ytL">
                                                             <rect key="frame" x="109" y="24" width="77" height="20"/>
@@ -96,7 +96,7 @@
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TableViewCell" id="waf-Jv-5j0" customClass="TableViewCell" customModule="MusicPlayerControl" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="55.5" width="375" height="102"/>
+                                        <rect key="frame" x="0.0" y="56" width="375" height="102"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="waf-Jv-5j0" id="GXd-5v-Slx">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="101"/>
